Added sinon support and made files an argument
- [FEATURE] Added support for sinon to be used inside test files.
- [FEATURE] Removes files option and made it an argument.
- [MISC] Updated all dependencies to their latest versions.
- [MISC] Added badges to README.
- [MISC] Updated README with latest information.
- [MISC] Updated license year to reflect new year.

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,14 @@
 
   <script src="https://unpkg.com/chai/chai.js"></script>
   <script src="https://unpkg.com/mocha/mocha.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/8.0.2/sinon.min.js"></script>
 
   <script class="mocha-init" type="module">
 
     mocha.setup('bdd');
     mocha.checkLeaks();
 
-  </script><script type="module" src="./scripts/2.js"></script><script type="module" src="./scripts/1.js"></script><script type="module" src="./scripts/3.js"></script>
+  </script><script type="module" src="./scripts/3.js"></script><script type="module" src="./scripts/2.js"></script><script type="module" src="./scripts/1.js"></script>
 
   <script class="mocha-exec" type="module">
 
