--- a/src/base.html
+++ b/src/base.html
@@ -18,6 +18,7 @@
 
   <script src="https://unpkg.com/chai/chai.js"></script>
   <script src="https://unpkg.com/mocha/mocha.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/8.0.2/sinon.min.js"></script>
 
   <script class="mocha-init" type="module">
 
